--- a/package.json
+++ b/package.json
@@ -12,11 +12,10 @@
     "@react-three/drei": "^9.120.5",
     "@react-three/fiber": "^8.17.10",
     "next": "15.1.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.2.0",
+  "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.2",
-    "react-scroll": "^1.9.0",
-    "react-three": "^0.9.7"
+    "react-scroll": "^1.9.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
